# LangGraph-ai-agent

./: .env.template  .gitignore  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt  run.py
.chainlit/translations/: pt-BR.json
eval/: analyze_results.py  run_comparison.py  run_evaluation.py
scripts/: vectordb.py
src/: agent.py  bigquery.py  config.py  llm.py  models.py
src/nodes/: category.py  chat.py  intent.py  schema.py  sqlexec.py  sqlgen.py  sqlrespond.py  sqlvalid.py
